# Generated by Django 5.2.9 on 2026-01-14 17:32

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('contenttypes', '0002_remove_content_type_name'),
        ('nbms_app', '0011_reportingcycle_reportinginstance'),
    ]

    operations = [
        migrations.CreateModel(
            name='InstanceExportApproval',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('object_uuid', models.UUIDField()),
                ('decision', models.CharField(choices=[('approved', 'Approved'), ('revoked', 'Revoked')], default='approved', max_length=20)),
                ('approval_scope', models.CharField(default='export', max_length=50)),
                ('approved_at', models.DateTimeField(blank=True, null=True)),
                ('decision_note', models.TextField(blank=True)),
                ('approved_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='instance_export_approvals', to=settings.AUTH_USER_MODEL)),
                ('content_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='contenttypes.contenttype')),
                ('reporting_instance', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='approvals', to='nbms_app.reportinginstance')),
            ],
            options={
                'constraints': [models.UniqueConstraint(fields=('reporting_instance', 'content_type', 'object_uuid', 'approval_scope'), name='uq_instance_export_approval')],
            },
        ),
    ]
