# Generated by Django 5.2.9 on 2026-01-15 05:28

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('contenttypes', '0002_remove_content_type_name'),
        ('nbms_app', '0013_exportpackage_reporting_instance'),
    ]

    operations = [
        migrations.CreateModel(
            name='ConsentRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('object_uuid', models.UUIDField()),
                ('status', models.CharField(choices=[('required', 'Required'), ('granted', 'Granted'), ('denied', 'Denied'), ('revoked', 'Revoked')], default='required', max_length=20)),
                ('granted_at', models.DateTimeField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('consent_document', models.FileField(blank=True, null=True, upload_to='consent/')),
                ('content_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='contenttypes.contenttype')),
                ('granted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='consent_records', to=settings.AUTH_USER_MODEL)),
                ('reporting_instance', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='consent_records', to='nbms_app.reportinginstance')),
            ],
            options={
                'constraints': [models.UniqueConstraint(fields=('reporting_instance', 'content_type', 'object_uuid'), name='uq_consent_record')],
            },
        ),
    ]
